fixing launchpad overflow issues

--- a/app/assets/stylesheets/launchpad.css.scss
+++ b/app/assets/stylesheets/launchpad.css.scss
@@ -27,7 +27,7 @@ $success_color: #62c462;
     form.form-horizontal { margin: 0; }
     form.form-horizontal label { display:inline-block; }
     form.form-horizontal input { margin: 5px 0 3px 0; margin-left:22px;}
-    legend { margin-bottom: 10px; }
+    legend { margin-bottom: 10px; line-height: 32px;  }
     a.next { margin-top: 5px; float: right; }
     .step1 fieldset { display: inline-block; margin-right:15px; width:58.1%; }
     .step2 {
@@ -112,6 +112,7 @@ $success_color: #62c462;
       
       .launchpadCRcolumn { 
         width: 100%; 
+        height: 100%;
         display:inline-block; 
         vertical-align: top; 
         overflow:auto;
